<resources>
    <string name="app_name">My Finanses</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_again">password again</string>
    <string name="login_button">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_budget">Home budget</string>
    <string name="investments">Investments</string>
    <string name="user_data">User data</string>
    <string name="balance">Balance</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>
    <string name="history">History</string>
    <string name="add">Add</string>
    <string name="name">name</string>
    <string name="amount">amount</string>
    <string name="amount_item">Amount :</string>
    <string name="date_item">Date :</string>
    <string name="type_item">Type :</string>
    <string name="name_item">Name :</string>
    <string name="all">All</string>
    <string name="logout">Log Out</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="Email">Email</string>
    <string name="changeEmail">Change Email</string>
    <string name="changePassword">Change Password</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="price">Price</string>
    <string name="value_of_financial_assets">Value of financial assets</string>
    <string name="add_investment">Add investment</string>
    <string name="asset_type">Asset type</string>
    <string name="current_prices">Current prices</string>
    <string name="buy_price">Buy price</string>
    <string name="current_value_of_assets">Current value of assets</string>
</resources>