<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.account.login.LoginFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.myfinanses.ui.account.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/login"
            android:textColor="@color/teal_700"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:autofillHints="emailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}" />

        <EditText
            android:autofillHints="password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:enabled="@{viewModel.areInputsCorrect}"
            android:onClick="@{()->viewModel.logIn()}"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:padding="8dp"
            android:text="@string/register" />

    </LinearLayout>

</layout>