<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.homebudget.expense.HomeBudgetExpenseFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.myfinanses.ui.main.homebudget.expense.HomeBudgetExpenseViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/add_expense"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:textStyle="bold" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="emailAddress"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:text="@={viewModel.name}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:autofillHints="password"
            android:hint="@string/amount"
            android:inputType="number"
            android:text="@={viewModel.amount}" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:enabled="@{viewModel.areInputsCorrect}"
            android:onClick="@{()->viewModel.addExpense()}"
            android:text="@string/add" />

    </LinearLayout>

</layout>